stderr
   Compiling hiker v0.1.0 (/sandbox)
error[E0425]: cannot find function `sum_rolls_in_frame` in this scope
  --> src/lib.rs:42:22
   |
42 |             bonus += sum_rolls_in_frame(next_frame);
   |                      ^^^^^^^^^^^^^^^^^^ not found in this scope

For more information about this error, try `rustc --explain E0425`.
error: could not compile `hiker` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `hiker` (lib test) due to 1 previous error
